--- a/Deposito/src/app/pages/lst/lst-orden-compra/lst-orden-compra.component.html
+++ b/Deposito/src/app/pages/lst/lst-orden-compra/lst-orden-compra.component.html
@@ -31,10 +31,10 @@
               <tr>
                 <th>Orden Compra</th>
                 <th>Licitación</th>
-                <th>Proveedor</th>
                 <th>Fecha Compra</th>
-                <th>Pago</th>
+                <th>Fecha Pago</th>
                 <th>Tipo Compra</th>
+                <th>Observacion</th>
                 <th *ngIf="!exportar">Acción</th>
               </tr>
             </thead>
@@ -42,10 +42,10 @@
               <tr *ngFor="let item of items">
                 <td>{{ item.ordenCompraNum }}</td>
                 <td>{{ item.nroLicitacion }}</td>
-                <td>{{ item.proveedor.nombre | uppercase }}</td>
                 <td>{{ item.fechaOrdenCompra | date: "dd/MM/yyyy" }}</td>
-                <td>{{ item.fechaPago | date: "dd/MM/yyyy" }}</td>
+                <td>{{ item?.fechaPago | date: "dd/MM/yyyy" }}</td>
                 <td>{{ tipoCompra(item.tipoCompra) }}</td>
+                <td>{{ item.observacion }}</td>
                 <td *ngIf="!exportar">
                   <button
                     type="button"
@@ -67,17 +67,6 @@
                     class="btn btn-warning btn-sm"
                   >
                     <i class="fas fa-clipboard-check"></i>
-                  </button>
-                  &nbsp;
-                  <button
-                    type="button"
-                    title="Reporte de Compra"
-                    (click)="linkearFaltante(item.id)"
-                    placement="top"
-                    show-delay="10"
-                    class="btn btn-info btn-sm"
-                  >
-                    <i class="fa fa-th-list" aria-hidden="true"></i>
                   </button>
                 </td>
               </tr>
