--- a/Deposito/src/app/pages/frm-abm/abm-detalle-compra/abm-detalle-compra.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-detalle-compra/abm-detalle-compra.component.html
@@ -183,6 +183,17 @@
               &nbsp;
               <button
                 type="button"
+                title="Detalle Equipo"
+                (click)="linkearDetalleEquipo(i.id)"
+                placement="top"
+                show-delay="10"
+                class="btn btn-secondary btn-sm"
+              >
+                <i class="fa fa-folder" aria-hidden="true"></i>
+              </button>
+              &nbsp;
+              <button
+                type="button"
                 title="Reporte de Compra"
                 (click)="linkearFaltante(i.id)"
                 placement="top"
