--- a/Deposito/src/app/pages/frm-abm/abm-detalle-equipo/abm-detalle-equipo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-detalle-equipo/abm-detalle-equipo.component.html
@@ -21,7 +21,7 @@
                 {{ detallecompra.tipoEquipo.nombre }}
               </div>
               <div class="col-md-4">
-                <label for=""> <b>Cantidad Compradas:</b></label>
+                <label for=""> <b>Cantidad Comprada:</b></label>
                 {{ detallecompra.cantidadCompra }}
               </div>
               <div class="col-md-4">
