--- a/Deposito/src/app/pages/componentes/reporte-faltante/reporte-faltante.component.html
+++ b/Deposito/src/app/pages/componentes/reporte-faltante/reporte-faltante.component.html
@@ -77,9 +77,8 @@
           </table>
           correspondiente a
           <b>{{ instrumento(item.compra.tipoCompra) }}</b> nro.
-          <b> {{ item?.compra?.nroLicitacion }}</b>
-          <b>{{ item?.compra?.nroPreadjudicacion }}</b
-          >. Es todo, no siendo para más se da por finalizado el presente acto,
+          <b> {{ item?.ordenCompraNum }}</b>
+          . Es todo, no siendo para más se da por finalizado el presente acto,
           previa integra lectura efectuadas por las partes, quienes para
           constancia legal firman al pie.
           <b>CONSTE.-</b>
