--- a/Deposito/src/app/pages/frm-abm/abm-orden-compra/abm-orden-compra.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-orden-compra/abm-orden-compra.component.html
@@ -17,127 +17,16 @@
             type="text"
             oninvalid="setCustomValidity('El campo es obligatorio')"
             oninput="setCustomValidity('')"
-            minlength="4"
-            (keydown.enter)="buscar(2)"
+            minlength="2"
             id="nroExpte"
             name="nroExpte"
             placeholder="Número de expediente"
             [(ngModel)]="item.nroExpediente"
           />
         </div>
-        <!-- tipo de compra -->
-        <div class="col-md-6">
-          <label for="title">Tipo de compra</label>
-          <select
-            class="form-control"
-            data-style="btn-primary"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            [(ngModel)]="item.tipoCompra"
-            name="tipoCompra"
-            id="tipoCompra"
-            required
-          >
-            <option value="CD">Contratación Directa</option>
-            <option value="CP">Concurso de Precios</option>
-            <option value="LPr">Licitación Privada</option>
-            <option value="LPu">Licitación Pública</option>
-          </select>
-        </div>
-      </div>
-      <div class="row">
-        <!-- nota preadjudicacion -->
-        <div class="form-group col-md-6">
-          <label for="title">Nota de Preadjudicación</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            id="notaPreadjudicacion"
-            name="notaPreadjudicacion"
-            placeholder="Nota de Preadjudicación"
-            [(ngModel)]="item.notaPreadjudicacion"
-          />
-        </div>
-        <!-- numero preadjudicacion -->
-        <div class="form-group col-md-6">
-          <label for="title">Número de Preadjudicación</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            id="nroPreadjudicacion"
-            name="nroPreadjudicacion"
-            placeholder="Nro. de Preadjudicación"
-            [(ngModel)]="item.nroPreadjudicacion"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <!-- fecha Invitación -->
-        <div class="col-md-6">
-          <label id="label">Fecha de Notificacion</label>
-          <div class="input-group mb-4">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <input
-                  name="checkedInvitacion"
-                  id="checkedInvitacion"
-                  type="checkbox"
-                  [(ngModel)]="checkedInvitacion"
-                />
-              </div>
-            </div>
-            <input
-              *ngIf="checkedInvitacion"
-              id="fechaInvitacion"
-              name="fechaInvitacion"
-              [(ngModel)]="item.fechaInvitacion"
-              type="date"
-              class="form-control"
-            />
-          </div>
-        </div>
-        <!-- orden de compra -->
-        <div class="form-group col-md-6">
-          <label for="title">Número Orden de Compra</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            (keydown.enter)="buscar(1)"
-            id="nroOrdenCompra"
-            name="nroOrdenCompra"
-            placeholder="Orden de compra"
-            [(ngModel)]="item.ordenCompraNum"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <!-- numero de factura -->
-        <div class="form-group col-md-4">
-          <label for="title">Número de factura</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            id="nroFactura"
-            name="nroFactura"
-            placeholder="Número de factura"
-            [(ngModel)]="item.nroFactura"
-          />
-        </div>
         <!-- fecha compra -->
-        <div class="form-group col-md-4">
-          <label id="label">Fecha Entrega</label>
+        <div class="form-group col-md-6">
+          <label id="label">Fecha Pedido Compra</label>
           <div class="input-group mb-4">
             <div class="input-group-prepend">
               <div class="input-group-text">
@@ -159,9 +48,98 @@
             />
           </div>
         </div>
+      </div>
+
+      <div class="row">
+        <!-- tipo de compra -->
+        <div class="col-md-6">
+          <label for="title">Tipo de compra</label>
+          <select
+            class="form-control"
+            data-style="btn-primary"
+            oninvalid="setCustomValidity('El campo es obligatorio')"
+            oninput="setCustomValidity('')"
+            [(ngModel)]="item.tipoCompra"
+            name="tipoCompra"
+            id="tipoCompra"
+            required
+          >
+            <option value="CD">Contratación Directa</option>
+            <option value="CP">Concurso de Precios</option>
+            <option value="LPr">Licitación Privada</option>
+            <option value="LPu">Licitación Pública</option>
+          </select>
+        </div>
+        <!-- orden de compra -->
+        <div class="form-group col-md-6">
+          <label for="title">Número de Compra</label>
+          <input
+            class="form-control"
+            type="text"
+            oninvalid="setCustomValidity('El campo es obligatorio')"
+            oninput="setCustomValidity('')"
+            minlength="4"
+            (keydown.enter)="buscar(1)"
+            id="ordenCompraNum"
+            name="ordenCompraNum"
+            placeholder="Orden de compra"
+            [(ngModel)]="item.ordenCompraNum"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <!-- fecha Invitación -->
+        <div class="col-md-6">
+          <label id="label">Fecha invitación a cotizar</label>
+          <div class="input-group mb-4">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                <input
+                  name="checkedInvitacion"
+                  id="checkedInvitacion"
+                  type="checkbox"
+                  [(ngModel)]="checkedInvitacion"
+                />
+              </div>
+            </div>
+            <input
+              *ngIf="checkedInvitacion"
+              id="fechaInvitacion"
+              name="fechaInvitacion"
+              [(ngModel)]="item.fechaInvitacion"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label id="label">Fecha y hora de apertura</label>
+          <div class="input-group mb-6">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                <input
+                  name="checkedadjudicacion"
+                  id="checkedadjudicacion"
+                  type="checkbox"
+                  [(ngModel)]="checkedadjudicacion"
+                />
+              </div>
+            </div>
+            <input
+              *ngIf="checked"
+              id="fechaOrdenCompra"
+              name="fechaOrdenCompra"
+              [(ngModel)]="item.fechaOrdenCompra"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <!-- fecha Adjudicación -->
-        <div class="col-md-4">
-          <label id="label">Fecha de Adjudicación</label>
+        <div class="col-md-6">
+          <label id="label">Fecha de Preadjudicación</label>
           <div class="input-group mb-6">
             <div class="input-group-prepend">
               <div class="input-group-text">
@@ -183,12 +161,9 @@
             />
           </div>
         </div>
-      </div>
-
-      <div class="row">
         <!-- fecha Licitación -->
         <div class="col-md-6">
-          <label id="label">Fecha de Licitación</label>
+          <label id="label">Fecha Notificación de Preadjudicación</label>
           <div class="input-group mb-6">
             <div class="input-group-prepend">
               <div class="input-group-text">
@@ -210,64 +185,7 @@
             />
           </div>
         </div>
-        <!-- licitacion -->
-        <div class="form-group col-md-6">
-          <label for="title">Número de Licitación</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            id="nroLicitacion"
-            name="nroLicitacion"
-            placeholder="Número de licitacion"
-            [(ngModel)]="item.nroLicitacion"
-          />
-        </div>
       </div>
-      <div class="row">
-        <!-- orden de pago -->
-        <div class="form-group col-md-6">
-          <label for="title">Orden de pago</label>
-          <input
-            class="form-control"
-            type="text"
-            oninvalid="setCustomValidity('El campo es obligatorio')"
-            oninput="setCustomValidity('')"
-            minlength="4"
-            id="ordenPago"
-            name="ordenPago"
-            placeholder="Orden de pago"
-            [(ngModel)]="item.ordenPago"
-          />
-        </div>
-        <!-- fecha pago compra -->
-        <div class="col-md-6">
-          <label id="label">Fecha de pago de compra</label>
-          <div class="input-group mb-4">
-            <div class="input-group-prepend">
-              <div class="input-group-text">
-                <input
-                  name="checkedfechaPago"
-                  id="checkedfechaPago"
-                  type="checkbox"
-                  [(ngModel)]="checkedfechaPago"
-                />
-              </div>
-            </div>
-            <input
-              *ngIf="checkedfechaPago"
-              id="fechaPago"
-              name="fechaPago"
-              [(ngModel)]="item.fechaPago"
-              type="date"
-              class="form-control"
-            />
-          </div>
-        </div>
-      </div>
-
       <br />
       <div class="row">
         <!-- Observaciones -->
